# chocolate-doom

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  aes_prng.c  aes_prng.h  d_dedicated.c  d_event.c  d_event.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doomkeys.h  doomtype.h  gusconf.c  gusconf.h  i_cdmus.c  i_endoom.c  i_glob.c  i_glob.h  i_input.c  i_input.h  i_joystick.c  i_joystick.h  i_main.c  i_midipipe.c  i_midipipe.h  i_musicpack.c  i_oplmusic.c  (+71 more)
src/doom/: CMakeLists.txt  am_map.c  am_map.h  d_englsh.h  d_items.c  d_items.h  d_main.c  d_net.c  d_player.h  deh_ammo.c  deh_bexstr.c  deh_cheat.c  deh_doom.c  deh_frame.c  deh_misc.c  deh_ptr.c  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.h  doomstat.c  doomstat.h  dstrings.c  dstrings.h  f_finale.c  f_wipe.c  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  info.h  m_menu.c  m_random.c  p_ceilng.c  p_doors.c  p_enemy.c  (+42 more)
src/heretic/: am_data.h  am_map.c  am_map.h  ct_chat.c  d_main.c  d_net.c  deh_ammo.c  deh_frame.c  deh_htext.c  deh_htic.c  deh_htic.h  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.h  dstrings.h  f_finale.c  g_game.c  in_lude.c  info.c  info.h  m_random.c  m_random.h  mn_menu.c  p_action.h  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_lights.c  p_local.h  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_pspr.c  p_saveg.c  p_setup.c  (+20 more)
src/hexen/: a_action.c  am_data.h  am_map.c  am_map.h  ct_chat.c  d_net.c  f_finale.c  g_game.c  h2_main.c  h2def.h  in_lude.c  info.c  info.h  m_random.c  m_random.h  mn_menu.c  p_acs.c  p_anim.c  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_lights.c  p_local.h  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_pspr.c  p_setup.c  p_sight.c  p_spec.c  p_spec.h  p_switch.c  p_telept.c  p_things.c  p_tick.c  p_user.c  po_man.c  (+19 more)
src/setup/: compatibility.c  display.c  display.h  execute.c  execute.h  joystick.c  joystick.h  keyboard.c  keyboard.h  mainmenu.c  mode.c  mode.h  mouse.c  multiplayer.c  multiplayer.h  setup_icon.c  sound.c  txt_joyaxis.c  txt_joyaxis.h  txt_joybinput.c  txt_joybinput.h  txt_keyinput.c  txt_keyinput.h  txt_mouseinput.c  txt_mouseinput.h
src/strife/: am_map.c  d_englsh.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_player.h  d_think.h  deh_cheat.c  deh_frame.c  deh_misc.c  deh_strife.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.h  doomstat.c  doomstat.h  dstrings.c  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  info.h  m_menu.c  m_menu.h  m_random.c  m_saves.c  m_saves.h  p_ceilng.c  p_dialog.c  p_dialog.h  (+49 more)
